--- a/src/PetLove_assets/assets/main.css
+++ b/src/PetLove_assets/assets/main.css
@@ -1,3 +1,14 @@
+@font-face {
+    font-family: "LuxuriousScript";
+    src: local("LuxuriousScript"), url("./fonts//LuxuriousScript-Regular.ttf") format("truetype");
+}
+
+@font-face {
+    font-family: "Anton";
+    src: local("Anton"), url("./fonts//Anton-Regular.ttf") format("truetype");
+}
+
+
 body {
     font-family: sans-serif;
     font-size: 1.5rem;
