--- a/src/PetLove_assets/src/components/styles.css
+++ b/src/PetLove_assets/src/components/styles.css
@@ -2,3 +2,14 @@
     height: 50px;
     width: 50px;
 }
+
+.app-bar-title {
+    font-family: "LuxuriousScript";
+    color: gray;
+    font-size: 36px;
+}
+
+.logo-text {
+    font-family: 'Anton';
+    font-size: 30px;
+}
