--- a/src/PetLove_assets/src/Landing/Landing.module.css
+++ b/src/PetLove_assets/src/Landing/Landing.module.css
@@ -1,7 +1,58 @@
-.myButton {
-    background-color: #a09dbf;
-    color: #FFFFFF;
-    width: 50px;
-    height: 50px;
+/*.app-bar-title {*/
+/*    font-family: "LuxuriousScript";*/
+/*    color: gray;*/
+/*    font-size: 36px;*/
+/*}*/
+
+/*.logo-text {*/
+/*    font-family: 'Anton';*/
+/*    font-size: 30px;*/
+/*}*/
+
+
+.main-title {
+    color: #123456;
 }
 
+.subtitle {
+    font-family: Courgette;
+}
+
+.introduction {
+    font-family: Smooch;
+}
+
+
+.aws-btn {
+
+    --button-default-height: 48px;
+    --button-default-font-size: 14px;
+    --button-default-border-radius: 6px;
+    --button-horizontal-padding: 20px;
+    --button-raise-level: 5px;
+    --button-hover-pressure: 2;
+    --transform-speed: 0.185s;
+    --button-primary-color: #a9d3e9;
+    --button-primary-color-dark: #58a9d4;
+    --button-primary-color-light: #2e84b2;
+    --button-primary-color-hover: #95c9e4;
+    --button-primary-border: none;
+    --button-secondary-color: #fafafa;
+    --button-secondary-color-dark: #67cbc3;
+    --button-secondary-color-light: #349890;
+    --button-secondary-color-hover: #ecf9f8;
+    --button-secondary-border: 2px solid #b3e5e1;
+    --button-anchor-color: #95d44a;
+    --button-anchor-color-dark: #52a934;
+    --button-anchor-color-light: #3f8228;
+    --button-anchor-color-hover: #89cf35;
+    --button-anchor-border: 2px solid #5bbd3a;
+}
+
+.rotate_back {
+    -webkit-transform: rotate(30deg);
+    -moz-transform: rotate(30deg);
+    -o-transform: rotate(30deg);
+    -ms-transform: rotate(30deg);
+    transform: rotate(30deg);
+}
