feat: pet market pagination

--- a/src/PetLove_assets/assets/main.css
+++ b/src/PetLove_assets/assets/main.css
@@ -62,5 +62,10 @@ button[type="submit"] {
 }
 
 .card-image{
-    width: 40%;
+    max-width: 200px;
+    max-height: 200px;
+}
+
+.pet-detail-text {
+    font-size: 18px;
 }
