--- a/src/PetLove_assets/src/personal/InfoCard/InfoCard.css
+++ b/src/PetLove_assets/src/personal/InfoCard/InfoCard.css
@@ -1,22 +1,19 @@
-.board{
-    box-shadow: 6px 6px 4px 2px rgba(0, 0, 0, 0.2);
-    width: 80%;
-    height: 60%;
-    position: relative;
-    top: auto;
-    /*left: 20%;*/
-    align-items: center;
-    border-radius: 10% 10%;
-    background-image: url("../static/dashBoard.png");
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
 
 .content{
     position: relative;
-    top: 20%;
+    /*top: 20%;*/
     align-items: center;
+    box-shadow: 6px 6px 4px 2px rgba(0, 0, 0, 0.2);
+    height: 60%;
+    top: auto;
+    /*position: relative;*/
+    /*margin-top: 50px;*/
+    /*left: 20%;*/
+    /*align-items: center;*/
+    border-radius: 10% 10%;
+    background-image: url("../static/dashBoard-2.png");
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 
@@ -25,4 +22,11 @@
     margin-left: 50%;
     margin-top: 100%;
     transform: translateX(-50%) translateY(-100%);
+}
+
+.column{
+    position: relative;
+    top: auto;
+    height: inherit;
+    width: inherit;
 }
