--- a/src/PetLove_assets/src/Landing/Landing.css
+++ b/src/PetLove_assets/src/Landing/Landing.css
@@ -48,9 +48,9 @@
 }
 
 .main-title{
-    color:#ef3473;
-    font-family: Courgette, serif;
-    /*font-size: 50px;*/
+    color:#8293ca;
+    font-family: GrapeSoda, serif;
+    font-size: 100px;
 }
 
 .introduction{
