--- a/src/PetLove_assets/src/personal/InfoCard/InfoCard.css
+++ b/src/PetLove_assets/src/personal/InfoCard/InfoCard.css
@@ -5,11 +5,7 @@
     align-items: center;
     box-shadow: 6px 6px 4px 2px rgba(0, 0, 0, 0.2);
     height: 60%;
-    top: auto;
-    /*position: relative;*/
-    /*margin-top: 50px;*/
-    /*left: 20%;*/
-    /*align-items: center;*/
+    /*top: 20%;*/
     border-radius: 10% 10%;
     background-image: url("../static/dashBoard-2.png");
     background-repeat: no-repeat;
@@ -18,10 +14,8 @@
 
 
 .button{
-    position: absolute;
-    margin-left: 50%;
-    margin-top: 100%;
-    transform: translateX(-50%) translateY(-100%);
+    max-height: 100%;
+    height: 10px;
 }
 
 .column{
@@ -29,4 +23,73 @@
     top: auto;
     height: inherit;
     width: inherit;
+    align-items: center;
 }
+
+.sub-column{
+    align-items: center;
+    horiz-align: center;
+    height: inherit;
+}
+
+.left-sub-block{
+    width: 50%;
+    height: auto;
+    text-align: right;
+    /*border: 1px solid #2e84b2;*/
+    /*border-radius: 30%;*/
+    margin-top: auto;
+    align-items: center;
+}
+
+.sub-block{
+    width: 100%;
+    height: auto;
+    text-align: left;
+    /*border: 1px solid #2e84b2;*/
+    border-radius: 30%;
+    margin-top: auto;
+    align-items: center;
+}
+
+.div-abs{
+    position: absolute;
+    top: 5%;
+    left: -5%;
+    font-family: LuxuriousScript, serif;
+    font-size: 100px;
+    transform: rotate(-30deg);
+    color: #ef3473;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
