--- a/src/PetLove_assets/src/components/styles.css
+++ b/src/PetLove_assets/src/components/styles.css
@@ -4,14 +4,15 @@
 }
 
 .app-bar-title {
-    font-family: "LuxuriousScript";
+    font-family: "LuxuriousScript", serif;
     color: gray;
     font-size: 36px;
 }
 
 .logo-text {
-    font-family: 'Anton';
+    font-family: 'Anton', serif;
     font-size: 30px;
+    color: #000000;
 }
 
 .footer {
