continual gui coding

--- a/src/PetLove_assets/src/personal/Pcenter.css
+++ b/src/PetLove_assets/src/personal/Pcenter.css
@@ -5,3 +5,17 @@
     width: inherit;
     align-items: center;
 }
+
+.partner{
+    width: 100%;
+    height: auto;
+    text-align: left;
+    /*border: 1px solid #2e84b2;*/
+    border-radius: 30%;
+    margin-top: auto;
+    align-items: center;
+}
+
+.partner:hover{
+    background-color: #ef3473;
+}
