--- a/src/PetLove_assets/src/index.css
+++ b/src/PetLove_assets/src/index.css
@@ -2,4 +2,16 @@
     width: 100%;
     height: 100%;
     /*position: relative;*/
+    /*background: linear-gradient(#e66465,#9198e5);*/
+    /*background-image: linear-gradient(rgb(230, 100, 101), rgb(145, 152, 229));*/
+    /*background-position-x: initial;*/
+    /*background-position-y: initial;*/
+    /*background-size: initial;*/
+    /*background-repeat-x: initial;*/
+    /*background-repeat-y: initial;*/
+    /*background-attachment: initial;*/
+    /*background-origin: initial;*/
+    /*background-clip: initial;*/
+    /*background-color: initial;*/
+    /*position: relative;*/
 }
