mile stone for market & random page

--- a/src/PetLove_assets/src/Landing/Landing.css
+++ b/src/PetLove_assets/src/Landing/Landing.css
@@ -58,7 +58,7 @@
 
 .introduction{
     color:#123456;
-    font-family: RobotoTI, sans-serif;
+    font-family: Courgette, serif;
     text-align: center;
     /*font-size: 20px;*/
 }
