--- a/src/PetLove_assets/src/Mall/pet-market.css
+++ b/src/PetLove_assets/src/Mall/pet-market.css
@@ -1,33 +1,36 @@
-.mall-pet-card{
-    background-color: #e0c8d1;
+.mall-pet-card {
+    /*background-color: #e0c8d1;*/
     position: relative;
     height: 20vh;
-    border-radius: 20%;
+    border-radius: 5%;
+    background: rgba(255, 255, 255, 1);
+    text-align: left;
 }
 
 
-.div-pet-image{
+.div-pet-image {
     max-height: 80%;
     max-width: 50%;
 }
 
-.mall-overall-height{
+.mall-overall-height {
     width: inherit;
     height: 60vh;
     margin-top: 10%;
-    border-radius: 10%;
-    background: #ede3e7;
+    border-radius: 5% ;
+    background: rgba(250, 227, 182, 0.25);
+    /*background: linear-gradient(rgba(209, 194, 211, 0.4), rgba(0, 0, 0, 0.4));*/
+    /*    #d1c2d3*/
     position: relative;
-    /*background-image: url("./static/market-back.jpg");*/
-    /*background-repeat: no-repeat;*/
-    /*background-position: center;*/
-    /*background-size: auto;*/
+
 }
 
 
-
-.colum-card-row{
+.colum-card-row {
     width: inherit;
     max-height: 40%;
 }
 
+.pet-description{
+    text-align: left;
+}
