--- a/src/PetLove_assets/src/Mall/random-pet.css
+++ b/src/PetLove_assets/src/Mall/random-pet.css
@@ -2,14 +2,19 @@
     width: inherit;
     height: 60vh;
     margin-top: 10%;
-    border-radius: 10%;
-    background: #ede3e7;
+    border-radius: 5% ;
+    background: rgba(250, 227, 182, 0.25);
     position: relative;
     align-content: center;
     align-items: center;
     vertical-align: center;
 }
 
-.wrap-img-btn-all {
-
+.pet-seat {
+    /*background-image: url("./static/dog-seat.png");*/
+    /*background-position: center;*/
+    /*background-repeat: no-repeat;*/
+    /*width: 1010px;*/
+    /*height: 785px;*/
+    /*background-size: 1010px 785px;*/
 }
