--- a/src/PetLove_assets/src/Personal/Pcenter.css
+++ b/src/PetLove_assets/src/Personal/Pcenter.css
@@ -11,11 +11,21 @@
     height: auto;
     text-align: left;
     /*border: 1px solid #2e84b2;*/
-    border-radius: 30%;
+    /*border-radius: 30%;*/
     margin-top: auto;
     align-items: center;
 }
 
 .partner:hover{
-    background-color: #ef3473;
+    display: inline-block;
+    vertical-align: middle;
+    -webkit-transform: perspective(1px) translateZ(0);
+    transform: perspective(1px) translateZ(0);
+    box-shadow: 0 0 1px rgb(0 0 0 / 0%);
+    position: relative;
+    background: #e1e1e1;
+    -webkit-transition-property: color;
+    transition-property: color;
+    -webkit-transition-duration: 0.3s;
+    transition-duration: 0.3s;
 }
