--- a/src/PetLove_assets/src/Components/Footer/footer.css
+++ b/src/PetLove_assets/src/Components/Footer/footer.css
@@ -1,7 +1,6 @@
-.foot-wrapper{
-    position: fixed;
-    font-family: Courgette, serif;
-    bottom: 0;
-    color: black;
-    text-align: center;
-}
+/*.main-foot {*/
+/*    background-color: #000 !important;*/
+/*    min-height: 350px;*/
+/*    width: 100%;*/
+/*    padding: 20px;*/
+/*}*/
