--- a/src/frontend/src/components/footer/Footer.css
+++ b/src/frontend/src/components/footer/Footer.css
@@ -1,6 +1,18 @@
-/*.main-foot {*/
-/*    background-color: #000 !important;*/
-/*    min-height: 350px;*/
-/*    width: 100%;*/
-/*    padding: 20px;*/
-/*}*/
+.main-foot {
+    background-color: #000 !important;
+    min-height: 350px;
+    width: 100%;
+    padding: 20px;
+}
+
+.footer-adj,.navbar-adj {
+    background-color: #0021423a !important;
+    color: #fff;
+}
+
+.footer-adj p {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
+
+、
