developing sketch of personal center

--- a/src/frontend/src/index.css
+++ b/src/frontend/src/index.css
@@ -168,7 +168,7 @@ td:first-child, th:first-child {
 }
 body {
     background-color: #000;
-    background-image: url("bg.jpg");
+    background-image: url("bg.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center;
