--- a/src/frontend/src/pages/user/tab.css
+++ b/src/frontend/src/pages/user/tab.css
@@ -1,5 +1,5 @@
 .tabs{
-    font-family:arial;
+    font-family: arial, serif;
     margin:0 auto;
     width:70%;
     text-align:center;
@@ -52,10 +52,14 @@ button{
     -webkit-flex-direction: row;
     display: flex;
     flex-direction: row;
+    height: 100%;
+    width: 100%;
 }
 
 .tab-content{
     width: 100%;
+    height: 100%;
     margin: 0 auto;
     border: 1px solid black;
+    position: relative;
 }
