--- a/src/frontend/src/pages/user/user-components/profile/Profile.css
+++ b/src/frontend/src/pages/user/user-components/profile/Profile.css
@@ -55,9 +55,30 @@
 .profile-text-p{
     max-width: 100%;
     font-size: 20px;
-    height: 40px;
+    height: 70px;
+    margin-top: auto;
+    margin-bottom: auto;
+}
+
+.profile-text-avatar{
+    display: -webkit-flex;
+    -webkit-flex-direction: row;
+    display: flex;
+    flex-direction: row;
 }
 
 .profile-dog-image{
     max-width: 100%;
 }
+
+.profile-avatar-container{
+    margin: auto;
+}
+
+.profile-avatar{
+    max-width: 32px;
+    max-height: 32px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
