--- a/src/frontend/src/index.scss
+++ b/src/frontend/src/index.scss
@@ -12,24 +12,38 @@
 
 $primary-color: #EA580B;
 
-
 html {
   --antd-wave-shadow-color: $primary-color;
 }
 
 body {
-  background-color: #000;
+  background-color: #FFFDFA;
   background-image: url('../assets/home-bg.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
   background-attachment: fixed;
-  font-family: 'Lato', sans-serif;
 }
 
 .container {
-  padding: 0;
+  background: #FFFDFA;
+
   margin: 0;
+  padding: 0;
+  max-width: 3000px;
+}
+
+.background {
+  background: #FFFDFA;
+  min-height: 100vh;
+}
+
+.header-wrapper {
+  width: 100%;
+  height: 64px;
+
+  background: #FFFDFA;
+  box-shadow: 0 4px 30px rgba(234, 88, 11, 0.08);
 }
 
 .flex {
@@ -44,4 +58,10 @@ body {
 .column {
   display: flex;
   flex-direction: column;
+}
+
+.central {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
