--- a/src/frontend/src/components/header/index.scss
+++ b/src/frontend/src/components/header/index.scss
@@ -7,6 +7,7 @@
 
   z-index: 1;
   width: 100%;
+  height: 128px;
   background: transparent;
   padding: 0 150px;
 }
@@ -82,9 +83,4 @@
   align-items: center;
 
   width: 220px;
-}
-
-.c-ipvTzC {
-  position: relative;
-  top: 20px;
 }
