--- a/src/frontend/src/components/header/index.scss
+++ b/src/frontend/src/components/header/index.scss
@@ -9,7 +9,7 @@
   width: 100%;
   height: 128px;
   background: transparent;
-  padding: 0 150px;
+  padding: 0 150px 50px;
 }
 
 .logo {
@@ -18,7 +18,7 @@
   justify-content: flex-start;
   align-items: center;
 
-  width: 220px;
+  width: 230px;
 }
 
 .logo-name {
@@ -34,7 +34,7 @@
 }
 
 .logo-img {
-  width: 80px;
+  width: 90px;
   height: 40px;
 }
 
